--- a/question_2.ipynb
+++ b/question_2.ipynb
@@ -22,10 +22,11 @@
     "def foo(chg_old, cname, t):\n",
     "    table1 = read_html(url, attrs = {'class' : 'tbldata14 bdrtpg'})[0]\n",
     "    print('At time :', t)\n",
-    "    display(table1.head())\n",
+    "    display(table1.head())  \n",
     "    chg_new = np.array(table1['%Chg'])\n",
     "    \n",
-    "    alert(chg_old, chg_new, cname)"
+    "    if t%2 == 0:  #checks after every 2 minutes\n",
+    "        alert(chg_old, chg_new, cname)"
    ]
   },
   {
